force-app/main/default/objects/MetadataComponentInventory__c/MetadataComponentInventory__c.object-meta.xml
<CustomObject>
    <description>Inventory of non-field metadata components scanned by Clarity360.</description>
    <label>Metadata Component Inventory</label>
    <nameField>
        <displayFormat>MCI-{000000}</displayFormat>
        <label>Metadata Component Inventory Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Component Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>