force-app/main/default/objects/MetadataComponentInventory__c/fields/ActivePublisherCount__c.field-meta.xml
<CustomField>
    <fullName>ActivePublisherCount__c</fullName>
    <label>Active Publisher Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>