force-app/main/default/objects/MetadataComponentInventory__c/fields/ActiveSubscriberCount__c.field-meta.xml
<CustomField>
    <fullName>ActiveSubscriberCount__c</fullName>
    <label>Active Subscriber Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>