force-app/main/default/objects/MetadataComponentInventory__c/fields/ApiName__c.field-meta.xml
<CustomField>
    <fullName>ApiName__c</fullName>
    <label>API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>