force-app/main/default/objects/MetadataComponentInventory__c/fields/ComponentKey__c.field-meta.xml
<CustomField>
    <fullName>ComponentKey__c</fullName>
    <externalId>true</externalId>
    <label>Component Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>