force-app/main/default/objects/MetadataComponentInventory__c/fields/ComponentType__c.field-meta.xml
<CustomField>
    <fullName>ComponentType__c</fullName>
    <label>Component Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>