force-app/main/default/objects/MetadataComponentInventory__c/fields/MonitoringEligible__c.field-meta.xml
<CustomField>
    <fullName>MonitoringEligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monitoring Eligible</label>
    <type>Checkbox</type>
</CustomField>