force-app/main/default/objects/MetadataComponentInventory__c/fields/NamespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>NamespacePrefix__c</fullName>
    <label>Namespace Prefix</label>
    <length>80</length>
    <type>Text</type>
</CustomField>