force-app/main/default/objects/MetadataComponentInventory__c/fields/ReferenceCount__c.field-meta.xml
<CustomField>
    <fullName>ReferenceCount__c</fullName>
    <label>Reference Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>