force-app/main/default/objects/MetadataComponentInventory__c/fields/SourceSummary__c.field-meta.xml
<CustomField>
    <fullName>SourceSummary__c</fullName>
    <label>Source Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>